Change project name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel-lover/optimizer",
+    "name": "laramagic/optimizer",
     "description": "Optimizes the HTML, compresses, and decreases the response time",
     "license": "MIT",
     "minimum-stability": "stable",
