--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "laramagic/optimizer",
     "description": "Optimizes the HTML, compresses, and decreases the response time",
     "license": "MIT",
+    "version": "1.0.6",
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.6.0",
